--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,12 @@
             <artifactId>akka-actor_2.12</artifactId>
             <version>2.5.12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 </project>
