--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>Assignemnt03PCD</groupId>
     <artifactId>Assignemnt03PCD</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>10</source>
+                    <target>10</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
